Commit the entire logic, of computing the statistics, Fix bugs related to addTimeout and default min value

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.transactions</groupId>
 	<artifactId>hometest</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>N26</version>
 	<packaging>jar</packaging>
 
 	<name>hometest</name>
